# mobile_manipulation

./: .gitignore  .pre-commit-config.yaml  README.md  requirements.txt
mm_assets/: CMakeLists.txt  package.xml
mm_assets/franka_panda/: compile_xacro.sh
mm_assets/launch/: view_model.launch  view_model.rviz  view_thing.launch
mm_assets/scenes/: compile_xacro.sh
mm_assets/scenes/meshes/: model.dae
mm_assets/scenes/meshes/chair/: model.dae
mm_assets/scenes/xacro/: restaurant.urdf.xacro  simple_obstacles.urdf.xacro  static_obstacles.urdf.xacro
mm_assets/thing/: compile_xacro.sh
mm_assets/thing/xacro/: arm_coverage.urdf.xacro  cameras.urdf.xacro  collision.urdf.xacro  end_effector_empty.urdf.xacro  end_effector_fingers.urdf.xacro  test.urdf.xacro
mm_control/: CMakeLists.txt  package.xml  setup.py
mm_control/scripts/: mpc_generate_c_code.py  test_SO3.py  test_cost_functions.py  test_mpc.yaml
mm_control/src/mm_control/: MPC.py  MPCBase.py  MPCConstraints.py  MPCCostFunctions.py  cost_registry.py  map.py  robot.py
mm_control/tests/: test_constraints.py  test_cost_functions.py  test_mpc.py  test_mpc.yaml  test_robot_model.py
mm_plan/: CMakeLists.txt  package.xml  setup.py
mm_plan/src/mm_plan/: BasePlanner.py  EEPlanner.py  PlanBaseClass.py  Planners.py  TaskManager.py  planner_registry.py
mm_run/: CMakeLists.txt  package.xml
mm_run/config/: 2d_collision.yaml  2d_collision_sdf.yaml  3d_collision.yaml  3d_collision_sdf.yaml  3d_collision_sdf_planner_sim.yaml  configuration.md  self_collision_avoidance.yaml  simple_experiment.yaml
mm_run/config/controller/: MPC.yaml  MPC_SIM.yaml
mm_run/config/map/: SDF2D.yaml  SDF3D.yaml
mm_run/config/robot/: box_container.yaml  default_thing_whole_body.yaml  robot_transforms_real.yaml  thing.yaml  ur10.yaml  urdf_transforms.yaml
mm_run/config/scene/: empty.yaml  ral25.yaml  restaurant.yaml  simple_obstacles.yaml  single_object.yaml  static_obstacles.yaml
mm_run/config/sensor/: cameras.yaml  femto_bolt_depth.yaml  femto_bolt_rgb.yaml
mm_run/config/sim/: isaac_sim.yaml  simulation.yaml
mm_run/config/teleop/: ps4.yaml
mm_run/config/test_experiments/: test_complex_waypoints.yaml  test_orientation_only.yaml  test_path_planning.yaml  test_position_only.yaml
mm_run/launch/: controller.launch  isaac_sim.launch  planner.launch  planner_test.launch  pybullet_sim.launch  rgbd_extrinsic.launch  run.launch  run_isaac_sim.launch  run_pybullet_sim.launch  rviz.launch  teleop.launch  thing_description.launch  visualize_rosbag.launch
mm_run/nodes/: isaac_sim_ros.py  mpc_ros.py  planner_test_ros.py  sim_ros.py
mm_run/rviz/: mm_basic.rviz  mm_slam.rviz
mm_run/scripts/: experiment.py  experiments.py  simple_sim.py
mm_simulator/: CMakeLists.txt  package.xml  setup.py
mm_simulator/src/mm_simulator/: camera.py  robot.py  simulation.py
mm_utils/: CMakeLists.txt  package.xml  setup.py
mm_utils/scripts/: demo_rosbag_post_processing.py  plot_calibration_results.py  plot_logger_pybullet.py  plot_logger_ros.py  plot_logger_ros_batch.sh  plot_path_comparison.py  plot_plan.py  plot_rosbag.py  plot_style.mplstyle  pub_msg_from_bag.py
mm_utils/src/mm_utils/: casadi_struct.py  color_profile.py  geometry.py  logging.py  math.py  matplotlib_helper.py  parsing.py  plot_setting.py  plotting.py  trajectory_generation.py  transformation.py
mm_utils/src/mm_utils/plotting/: __init__.py  (+3 more)
mmseq_control/: CMakeLists.txt
mmseq_control/scripts/: map_tester.py  mpc_constraint_tester.py  sdf_tester.py
mmseq_control/src/mmseq_control/: HTIDKC.py  HTMPC.py  IDKC.py  IDKCTasks.py  MPCConstraints.py  MPCCostFunctions.py  STMPC.py  map.py  robot.py
mmseq_run/: CMakeLists.txt
mmseq_run/config/: 2d_collision.yaml  2d_collision_sdf.yaml  3d_collision.yaml  3d_collision_sdf.yaml  3d_collision_sdf_planner.yaml  3d_collision_sdf_planner_sim.yaml  base_experiment.yaml  self_collision_avoidance.yaml  sequential.yaml  simple_experiment.yaml  whole_body.yaml
mmseq_run/config/controller/: HTIDKC.yaml  HTMPC.yaml  HTMPC_EEBase.yaml  MPC.yaml  MPC_SIM.yaml  ManHTMPC.yaml  NavHTMPC.yaml  NavHTMPCWorld.yaml  NavMPC.yaml
mmseq_run/config/map/: SDF2D.yaml  SDF3D.yaml  sdf.yaml
mmseq_run/config/ral/: base_experiment.yaml  base_trajectory.yaml  base_waypoints.yaml  demo.yaml  self_collision_avoidance.yaml  sequential.yaml
mmseq_run/config/ral25/: controller.yaml  ee_hold.yaml  pick_and_place.yaml  semi_static_reactive.yaml  semi_static_reactive_wholebody.yaml
mmseq_run/config/robot/: default_thing_whole_body.yaml  robot_transforms_real.yaml  thing.yaml  thing_collision_pairs.yaml  urdf_transforms.yaml
mmseq_run/config/scene/: empty.yaml  ral25.yaml  restaurant.yaml  simple_obstacles.yaml  single_object.yaml  static_obstacles.yaml
mmseq_run/config/sensor/: cameras.yaml  femto_bolt_depth.yaml  femto_bolt_rgb.yaml
mmseq_run/config/sim/: simulation.yaml
mmseq_run/launch/: isaac_sim.launch  run_isaac_sim.launch  rviz.launch  simple_demo.launch  simple_demo_sim.launch  simulation.launch  thing_description.launch  visualize_rosbag.launch
mmseq_run/nodes/: controller_ros.py  controller_ros_base_interactive.py  isaac_sim_ros.py  mpc_ros.py  sim_ros.py
mmseq_run/rviz/: mm_basic.rviz
mmseq_run/scripts/: benchmark.sh  benchmark_square_wave.sh  experiment_simulation_cpc.py  experiments.py  experiments_cpc.py  experiments_general.py  experiments_simple_demo.py  generate_random_tests.py  simple_sim.py  test_initial_guesses.py  test_loop_init_guesses.py  test_node_scaling.py  testing_ideas.py
mmseq_utils/: CMakeLists.txt
mmseq_utils/scripts/: plot_benchmark_result_self_collision.py  plot_benchmark_result_semi_static_reactive.py  plot_benchmark_result_squarewave.py  plot_calibration_results.py  plot_logger_pybullet.py  plot_logger_ros.py  plot_path_comparison.py  plot_plan.py  plot_ral25_semi_static_wholebody.sh  plot_rosbag.py  pub_msg_from_bag.py
mmseq_utils/src/mmseq_utils/: casadi.py  casadi_struct.py  color_profile.py  logging.py  math.py  matplotlib_helper.py  parsing.py  plot_casadi_time_optimal.py  plotting.py  trajectory_generation.py
(+160 files in other folders)
