<?xml version="1.0"?>
<package format="2">
  <name>mm_assets</name>
  <version>0.0.0</version>
  <description>Mobile manipulation robot and scene assets (URDF, meshes)</description>

  <maintainer email="todo@todo.todo">Maintainer</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
