<?xml version="1.0"?>
<package format="2">
  <name>mm_control</name>
  <version>0.0.0</version>
  <description>Mobile manipulation MPC control package</description>

  <maintainer email="todo@todo.todo">Maintainer</maintainer>
  <license>MIT</license>

  <depend>rospy</depend>
  <depend>mm_utils</depend>
  <depend>mm_plan</depend>
  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
