<?xml version="1.0"?>
<package format="2">
  <name>mm_utils</name>
  <version>0.0.0</version>
  <description>Mobile manipulation utilities package</description>

  <maintainer email="todo@todo.todo">Maintainer</maintainer>
  <license>MIT</license>

  <depend>rospy</depend>
  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
